--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
   heading: "MSc Computer Science E-Portfolio"
-  subheading: "MY E-PORTFOLIO BASED ON THE WORK CARRIED OUT ON THE MSC COMPUTER SCIENCE PROGRAMME."
+  subheading: "MY E-PORTFOLIO BASED ON THE WORK CARRIED OUT ON THE MSC COMPUTER SCIENCE PROGRAMME"
   banner: "your awesome url"
